--- a/src/org/flavigny/mmm/view/AlbumOverview.fxml
+++ b/src/org/flavigny/mmm/view/AlbumOverview.fxml
@@ -95,10 +95,10 @@
                         </Label>
                         <HBox>
                            <children>
-                              <TableView minWidth="-Infinity" prefHeight="100.0" prefWidth="450.0">
+                              <TableView fx:id="releaseTable" minWidth="-Infinity" prefHeight="100.0" prefWidth="450.0">
                                 <columns>
-                                  <TableColumn prefWidth="167.0" text="Artist" />
-                                  <TableColumn prefWidth="278.0" text="Title" />
+                                  <TableColumn fx:id="releaseArtistColumn" prefWidth="167.0" text="Artist" />
+                                  <TableColumn fx:id="releaseTitleColumn" prefWidth="278.0" text="Title" />
                                 </columns>
                                  <HBox.margin>
                                     <Insets />
@@ -106,7 +106,7 @@
                               </TableView>
                               <VBox>
                                  <children>
-                                    <Button mnemonicParsing="false" text="Add release">
+                                    <Button mnemonicParsing="false" onAction="#handleAddRelRelease" text="Add release">
                                        <VBox.margin>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
