--- a/src/org/flavigny/mmm/view/AddRelRelease.fxml
+++ b/src/org/flavigny/mmm/view/AddRelRelease.fxml
@@ -6,20 +6,19 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="480.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141">
+<AnchorPane prefHeight="480.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.flavigny.mmm.view.AddRelReleaseController">
    <children>
-      <TableView layoutX="68.0" layoutY="40.0" prefHeight="424.0" prefWidth="590.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+      <TableView fx:id="releaseTable" layoutX="68.0" layoutY="40.0" prefHeight="424.0" prefWidth="590.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
         <columns>
-          <TableColumn prefWidth="250.0" text="Artist" />
-          <TableColumn prefWidth="279.0" text="Title" />
-            <TableColumn prefWidth="70.0" text="Year" />
+          <TableColumn fx:id="artistColumn" prefWidth="250.0" text="Artist" />
+          <TableColumn fx:id="titleColumn" prefWidth="279.0" text="Title" />
+            <TableColumn fx:id="yearColumn" prefWidth="70.0" text="Year" />
         </columns>
       </TableView>
       <ButtonBar layoutX="358.0" layoutY="429.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
         <buttons>
-          <Button mnemonicParsing="false" text="Add rel." />
-            <Button mnemonicParsing="false" text="Cancel" />
+          <Button fx:id="addButton" mnemonicParsing="false" onAction="#handleOk" text="Add rel." />
+            <Button mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
         </buttons>
       </ButtonBar>
    </children>
