--- a/src/org/flavigny/mmm/view/ReleaseOverview.fxml
+++ b/src/org/flavigny/mmm/view/ReleaseOverview.fxml
@@ -112,7 +112,7 @@
                               </TableView>
                               <VBox prefHeight="200.0" prefWidth="100.0">
                                  <children>
-                                    <Button mnemonicParsing="false" text="Add album">
+                                    <Button mnemonicParsing="false" onAction="#handleAddRelAlbum" text="Add album">
                                        <VBox.margin>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
