--- a/src/org/flavigny/mmm/view/ReleaseOverview.fxml
+++ b/src/org/flavigny/mmm/view/ReleaseOverview.fxml
@@ -87,7 +87,7 @@
                         <ButtonBar prefHeight="40.0" prefWidth="200.0">
                           <buttons>
                             <Button mnemonicParsing="false" onAction="#handleNewRelease" text="New..." />
-                              <Button mnemonicParsing="false" text="Edit..." />
+                              <Button mnemonicParsing="false" onAction="#handleEditRelease" text="Edit..." />
                               <Button mnemonicParsing="false" text="Delete" />
                           </buttons>
                         </ButtonBar>
