--- a/src/org/flavigny/mmm/view/AlbumOverview.fxml
+++ b/src/org/flavigny/mmm/view/AlbumOverview.fxml
@@ -106,12 +106,12 @@
                               </TableView>
                               <VBox>
                                  <children>
-                                    <Button mnemonicParsing="false" onAction="#handleAddRelRelease" text="Add release">
+                                    <Button fx:id="addRelatedReleaseButton" disable="true" mnemonicParsing="false" onAction="#handleAddRelRelease" text="Add release">
                                        <VBox.margin>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
                                     </Button>
-                                    <Button mnemonicParsing="false" text="Delete release">
+                                    <Button fx:id="delRelatedReleaseButton" disable="true" mnemonicParsing="false" text="Delete release">
                                        <VBox.margin>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
@@ -147,12 +147,12 @@
                               </TableView>
                               <VBox prefHeight="200.0" prefWidth="100.0">
                                  <children>
-                                    <Button mnemonicParsing="false" text="Add tag">
+                                    <Button fx:id="addTagButton" disable="true" mnemonicParsing="false" text="Add tag">
                                        <VBox.margin>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
                                     </Button>
-                                    <Button mnemonicParsing="false" text="Delete tag">
+                                    <Button fx:id="delTagButton" disable="true" mnemonicParsing="false" text="Delete tag">
                                        <VBox.margin>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
