Gestion des tags

--- a/src/org/flavigny/mmm/view/AlbumOverview.fxml
+++ b/src/org/flavigny/mmm/view/AlbumOverview.fxml
@@ -112,7 +112,7 @@
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
                                     </Button>
-                                    <Button fx:id="delRelatedReleaseButton" disable="true" mnemonicParsing="false" text="Delete release">
+                                    <Button fx:id="delRelatedReleaseButton" disable="true" mnemonicParsing="false" onAction="#handleDeleteRelRelease" text="Delete release">
                                        <VBox.margin>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
@@ -134,10 +134,10 @@
                         </Label>
                         <HBox prefHeight="104.0" prefWidth="546.0">
                            <children>
-                              <TableView minWidth="-Infinity" prefHeight="100.0" prefWidth="450.0">
+                              <TableView fx:id="tagsTable" minWidth="-Infinity" prefHeight="100.0" prefWidth="450.0">
                                 <columns>
-                                  <TableColumn prefWidth="360.0" text="Name" />
-                                  <TableColumn prefWidth="88.0" text="Value" />
+                                  <TableColumn fx:id="tagNameColumn" prefWidth="360.0" text="Name" />
+                                  <TableColumn fx:id="tagValueColumn" prefWidth="88.0" text="Value" />
                                 </columns>
                                  <HBox.margin>
                                     <Insets />
