--- a/src/org/flavigny/mmm/view/AddTagDialog.fxml
+++ b/src/org/flavigny/mmm/view/AddTagDialog.fxml
@@ -25,7 +25,7 @@
             <Label text="Name" />
             <Label text="Value" GridPane.rowIndex="1" />
             <ComboBox fx:id="tagNameCombo" editable="true" prefHeight="26.0" prefWidth="469.0" GridPane.columnIndex="1" />
-            <TextField fx:id="tagValueField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="tagValueField" onAction="#handleOnAction" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
       <ButtonBar layoutX="330.0" layoutY="411.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
