--- a/src/org/flavigny/mmm/view/AlbumOverview.fxml
+++ b/src/org/flavigny/mmm/view/AlbumOverview.fxml
@@ -153,7 +153,7 @@
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
                                     </Button>
-                                    <Button fx:id="delTagButton" disable="true" mnemonicParsing="false" text="Delete tag">
+                                    <Button fx:id="delTagButton" disable="true" mnemonicParsing="false" onAction="#handleDeleteTag" text="Delete tag">
                                        <VBox.margin>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
