--- a/src/org/flavigny/mmm/view/ReleaseEditDialog.fxml
+++ b/src/org/flavigny/mmm/view/ReleaseEditDialog.fxml
@@ -54,7 +54,7 @@
         <buttons>
           <Button fx:id="okButton" disable="true" mnemonicParsing="false" onAction="#handleOk" text="Ok" />
             <Button cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
-            <Button mnemonicParsing="false" onAction="#handleMusicBrainz" prefHeight="26.0" prefWidth="110.0" text="MusicBrainz" />
+            <Button fx:id="musicbrainzButton" mnemonicParsing="false" onAction="#handleMusicBrainz" prefHeight="26.0" prefWidth="110.0" text="MusicBrainz" />
         </buttons>
       </ButtonBar>
    </children>
